--- a/1.Simple_RAG/Bhagavad_Gita_Assistant.ipynb
+++ b/1.Simple_RAG/Bhagavad_Gita_Assistant.ipynb
@@ -801,6 +801,290 @@
       "metadata": {},
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Entities extraction using LLM "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import fitz  # PyMuPDF\n",
+        "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+        "from langchain.embeddings import HuggingFaceEmbeddings\n",
+        "from langchain.vectorstores import Chroma\n",
+        "from langchain.chains import LLMChain\n",
+        "from langchain.prompts import PromptTemplate\n",
+        "from langchain.document_loaders import PyPDFLoader\n",
+        "from typing import List, Dict, Any\n",
+        "import chromadb\n",
+        "import os\n",
+        "\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"your-api-key\"\n",
+        "\n",
+        "def read_pdf(pdf_path: str) -> str:\n",
+        "    \"\"\"Read text from PDF using PyMuPDF.\"\"\"\n",
+        "    with fitz.open(pdf_path) as pdf:\n",
+        "        text = \"\"\n",
+        "        for page_num in range(pdf.page_count):\n",
+        "            page = pdf.load_page(page_num)\n",
+        "            text += page.get_text()\n",
+        "    return text.strip()\n",
+        "\n",
+        "def split_text_into_chunks(text: str, chunk_size: int = 1000, chunk_overlap: int = 200) -> List[str]:\n",
+        "    \"\"\"Split text into chunks using RecursiveCharacterTextSplitter.\"\"\"\n",
+        "    text_splitter = RecursiveCharacterTextSplitter(\n",
+        "        chunk_size=chunk_size,\n",
+        "        chunk_overlap=chunk_overlap,\n",
+        "    )\n",
+        "    chunks = text_splitter.split_text(text)\n",
+        "    return chunks\n",
+        "\n",
+        "def extract_entities_with_llm(chunk: str) -> List[str]:\n",
+        "    \"\"\"Extract entities from a text chunk using LLM.\"\"\"\n",
+        "    prompt = PromptTemplate(\n",
+        "        template=\"\"\"Extract relevant entities from the following text. Entities could be names, locations, organizations, or any other important nouns. Return them as a comma-separated list.\n",
+        "        \n",
+        "Text: {text}\n",
+        "        \n",
+        "Entities:\"\"\",\n",
+        "        input_variables=[\"text\"],\n",
+        "    )\n",
+        "    \n",
+        "    llm = OpenAI(temperature=0)\n",
+        "    entity_extractor = LLMChain(llm=llm, prompt=prompt)\n",
+        "    entities = entity_extractor.run(chunk).split(\", \")\n",
+        "    return entities\n",
+        "\n",
+        "def process_pdf_and_store_in_chroma(pdf_path: str) -> Chroma:\n",
+        "    \"\"\"Process PDF, extract text, split into chunks, and store in ChromaDB with metadata.\"\"\"\n",
+        "    # Read PDF\n",
+        "    text = read_pdf(pdf_path)\n",
+        "    \n",
+        "    # Split into chunks\n",
+        "    chunks = split_text_into_chunks(text)\n",
+        "    \n",
+        "    # Extract entities and create metadata\n",
+        "    metadata_list = []\n",
+        "    for chunk in chunks:\n",
+        "        entities = extract_entities_with_llm(chunk)\n",
+        "        metadata = {\"entities\": entities}\n",
+        "        metadata_list.append(metadata)\n",
+        "    \n",
+        "    # Create embeddings and store in ChromaDB\n",
+        "    embeddings = HuggingFaceEmbeddings()\n",
+        "    vectorstore = Chroma.from_documents(\n",
+        "        documents=chunks,\n",
+        "        embedding=embeddings,\n",
+        "        metadatas=metadata_list,\n",
+        "        collection_name=\"pdf_chunks\",\n",
+        "    )\n",
+        "    return vectorstore\n",
+        "\n",
+        "def retrieve_chunks(\n",
+        "    vectorstore: Chroma,\n",
+        "    query: str,\n",
+        "    similarity_threshold: float = 0.7,\n",
+        "    entity_filter: List[str] = None\n",
+        ") -> List[Dict[str, Any]]:\n",
+        "    \"\"\"Retrieve chunks based on similarity and metadata filtering.\"\"\"\n",
+        "    # Search with similarity\n",
+        "    docs_and_scores = vectorstore.similarity_search_with_score(query)\n",
+        "    \n",
+        "    # Filter by similarity score\n",
+        "    filtered_docs = [\n",
+        "        (doc, score) \n",
+        "        for doc, score in docs_and_scores \n",
+        "        if score > similarity_threshold\n",
+        "    ]\n",
+        "    \n",
+        "    # Further filter by entities if specified\n",
+        "    if entity_filter:\n",
+        "        final_docs = []\n",
+        "        for doc, score in filtered_docs:\n",
+        "            # Check if any of the query entities are present in document metadata\n",
+        "            for entity in entity_filter:\n",
+        "                if entity in doc.metadata[\"entities\"]:\n",
+        "                    final_docs.append((doc, score))\n",
+        "        return final_docs\n",
+        "    else:\n",
+        "        return filtered_docs\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Path to your PDF file\n",
+        "    pdf_path = \"your_custom.pdf\"\n",
+        "    \n",
+        "    # Process PDF and store in ChromaDB\n",
+        "    vectorstore = process_pdf_and_store_in_chroma(pdf_path)\n",
+        "    \n",
+        "    # Example query\n",
+        "    query = \"Tell me about the project timeline.\"\n",
+        "    # Optional entities to filter by\n",
+        "    entity_filter = [\"project\", \"timeline\"]\n",
+        "    \n",
+        "    # Retrieve relevant chunks\n",
+        "    results = retrieve_chunks(vectorstore, query, entity_filter=entity_filter)\n",
+        "    \n",
+        "    # Print results\n",
+        "    for doc, score in results:\n",
+        "        print(f\"Content: {doc.page_content}\")\n",
+        "        print(f\"Metadata: {doc.metadata}\")\n",
+        "        print(f\"Similarity Score: {score}\\n\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Approach 2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import fitz\n",
+        "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+        "from langchain.schema import Document\n",
+        "from langchain.prompts import ChatPromptTemplate\n",
+        "from langchain.chat_models import ChatOpenAI\n",
+        "from langchain.vectorstores import Chroma\n",
+        "from langchain.embeddings import OpenAIEmbeddings\n",
+        "from langchain.schema.output_parser import StrOutputParser\n",
+        "from typing import List, Optional\n",
+        "\n",
+        "# 1. Load and process PDF\n",
+        "def load_pdf_text(pdf_path: str) -> str:\n",
+        "    \"\"\"Extract text from PDF using PyMuPDF.\"\"\"\n",
+        "    doc = fitz.open(pdf_path)\n",
+        "    text = \"\"\n",
+        "    for page in doc:\n",
+        "        text += page.get_text()\n",
+        "    return text\n",
+        "\n",
+        "# 2. Split text into chunks\n",
+        "def split_text(text: str) -> List[str]:\n",
+        "    \"\"\"Split text using recursive splitter.\"\"\"\n",
+        "    splitter = RecursiveCharacterTextSplitter(\n",
+        "        chunk_size=1000,\n",
+        "        chunk_overlap=200\n",
+        "    )\n",
+        "    return splitter.split_text(text)\n",
+        "\n",
+        "# 3. Extract entities with LLM\n",
+        "def extract_entities(text: str, llm: ChatOpenAI) -> List[str]:\n",
+        "    \"\"\"Extract entities from text using LLM.\"\"\"\n",
+        "    prompt = ChatPromptTemplate.from_template(\n",
+        "        \"Extract all named entities as a comma-separated list. Text: {text}\"\n",
+        "    )\n",
+        "    chain = prompt | llm | StrOutputParser()\n",
+        "    entities_str = chain.invoke({\"text\": text})\n",
+        "    return [e.strip() for e in entities_str.split(\",\") if e.strip()]\n",
+        "\n",
+        "# Process PDF into chunks with metadata\n",
+        "def process_pdf(pdf_path: str) -> List[Document]:\n",
+        "    \"\"\"Convert PDF into LangChain Documents with entity metadata.\"\"\"\n",
+        "    text = load_pdf_text(pdf_path)\n",
+        "    chunks = split_text(text)\n",
+        "    llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
+        "    documents = []\n",
+        "    for chunk in chunks:\n",
+        "        entities = extract_entities(chunk, llm)\n",
+        "        documents.append(Document(\n",
+        "            page_content=chunk,\n",
+        "            metadata={\"entities\": entities}\n",
+        "        ))\n",
+        "    return documents\n",
+        "\n",
+        "# 4. Store in ChromaDB\n",
+        "def setup_chroma(docs: List[Document], persist_dir: str = \"./chroma_db\") -> Chroma:\n",
+        "    \"\"\"Create Chroma vectorstore from documents.\"\"\"\n",
+        "    vectorstore = Chroma.from_documents(\n",
+        "        documents=docs,\n",
+        "        embedding=OpenAIEmbeddings(),\n",
+        "        persist_directory=persist_dir\n",
+        "    )\n",
+        "    vectorstore.persist()\n",
+        "    return vectorstore\n",
+        "\n",
+        "# 5. Query handling with optional reranking\n",
+        "def retrieve_chunks(\n",
+        "    query: str, \n",
+        "    vectorstore: Chroma, \n",
+        "    use_reranker: bool = False, \n",
+        "    top_k: int = 5\n",
+        ") -> List[Document]:\n",
+        "    \"\"\"Retrieve and optionally rerank relevant chunks.\"\"\"\n",
+        "    # Extract query entities\n",
+        "    llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
+        "    query_entities = extract_entities(query, llm)\n",
+        "    \n",
+        "    # Build metadata filter\n",
+        "    filter = {\"entities\": {\"$in\": query_entities}} if query_entities else None\n",
+        "    \n",
+        "    # Initial retrieval\n",
+        "    k = 10 if use_reranker else top_k\n",
+        "    docs = vectorstore.similarity_search(query, k=k, filter=filter)\n",
+        "    \n",
+        "    # Cross-encoder reranking\n",
+        "    if use_reranker:\n",
+        "        from sentence_transformers import CrossEncoder\n",
+        "        reranker = CrossEncoder('cross-encoder/ms-marco-MiniLM-L-6-v2')\n",
+        "        pairs = [(query, doc.page_content) for doc in docs]\n",
+        "        scores = reranker.predict(pairs)\n",
+        "        scored_docs = sorted(zip(docs, scores), key=lambda x: x[1], reverse=True)\n",
+        "        docs = [doc for doc, _ in scored_docs[:top_k]]\n",
+        "    \n",
+        "    return docs[:top_k]\n",
+        "\n",
+        "# 6. Generate final response\n",
+        "def generate_response(\n",
+        "    query: str, \n",
+        "    vectorstore: Chroma, \n",
+        "    use_reranker: bool = False\n",
+        ") -> str:\n",
+        "    \"\"\"Generate answer from retrieved chunks.\"\"\"\n",
+        "    relevant_docs = retrieve_chunks(query, vectorstore, use_reranker)\n",
+        "    context = \"\\n\\n\".join([d.page_content for d in relevant_docs])\n",
+        "    \n",
+        "    prompt = ChatPromptTemplate.from_template(\n",
+        "        \"Answer using this context:\\n{context}\\n\\nQuestion: {query}\"\n",
+        "    )\n",
+        "    llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0.2)\n",
+        "    chain = prompt | llm | StrOutputParser()\n",
+        "    \n",
+        "    return chain.invoke({\"context\": context, \"query\": query})\n",
+        "\n",
+        "# Example Execution\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Preprocess and index PDF\n",
+        "    documents = process_pdf(\"your_file.pdf\")\n",
+        "    chroma_db = setup_chroma(documents)\n",
+        "    \n",
+        "    # Query with reranking\n",
+        "    user_query = \"What are the key points about machine learning?\"\n",
+        "    response = generate_response(user_query, chroma_db, use_reranker=True)\n",
+        "    print(\"Answer:\", response)"
+      ]
     }
   ],
   "metadata": {
