Qdrant agentic rag

--- a/3. Hybrid_Search/1. Qdrant/code.ipynb
+++ b/3. Hybrid_Search/1. Qdrant/code.ipynb
@@ -410,6 +410,69 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Agentic RAG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypedDict,Sequence\n",
+    "from langchain_core.messages import BaseMessage\n",
+    "from langgraph.graph import StateGraph, START, END,add_messages\n",
+    "from typing_extensions import  Annotated\n",
+    "\n",
+    "class AgentState(TypedDict):\n",
+    "    # The state of the agent includes at least the messages exchanged between the agent(s) \n",
+    "    # and the user. It is, however, possible to include other information in the state, as \n",
+    "    # it depends on the specific agent.\n",
+    "    messages: Annotated[Sequence[BaseMessage], add_messages]\n",
+    "\n",
+    "\n",
+    "def improve_query(state: AgentState):\n",
+    "    ...\n",
+    "\n",
+    "def retrieve_documents(state: AgentState):\n",
+    "    ...\n",
+    "\n",
+    "def generate_response(state: AgentState):\n",
+    "    ...\n",
+    "\n",
+    "# Building a graph requires defining nodes and building the flow between them with edges.\n",
+    "builder = StateGraph(AgentState)\n",
+    "\n",
+    "builder.add_node(\"improve_query\", improve_query)\n",
+    "builder.add_node(\"retrieve_documents\", retrieve_documents)\n",
+    "builder.add_node(\"generate_response\", generate_response)\n",
+    "\n",
+    "builder.add_edge(START, \"improve_query\")\n",
+    "builder.add_edge(\"improve_query\", \"retrieve_documents\")\n",
+    "builder.add_edge(\"retrieve_documents\", \"generate_response\")\n",
+    "builder.add_edge(\"generate_response\", END)\n",
+    "\n",
+    "# Compiling the graph performs some checks and prepares the graph for execution.\n",
+    "compiled_graph = builder.compile()\n",
+    "\n",
+    "# Compiled graph might be invoked with the initial state to start.\n",
+    "compiled_graph.invoke({\n",
+    "    \"messages\": [\n",
+    "        (\"user\", \"Why Qdrant is the best vector database out there?\"),\n",
+    "    ]\n",
+    "})\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
