Qdrant agentic rag

--- a/3. Hybrid_Search/1. Qdrant/code.ipynb
+++ b/3. Hybrid_Search/1. Qdrant/code.ipynb
@@ -415,7 +415,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Agentic RAG"
+    "#### Agentic RAG\n",
+    "\n",
+    "https://qdrant.tech/articles/agentic-rag/"
    ]
   },
   {
